<resources>
    <string name="app_name">ANIMODE</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="to_watch">To watch</string>
    <string name="profile">Profile</string>
    <string name="anime_name">anime name</string>
    <string name="episodes">episodes</string>
    <string name="ex_juandelacruz_gmail_com">ex: juandelacruz@gmail.com</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="search_your_anime">Search your anime</string>
    <string name="the_anime_is_not_available_here">The anime is not available here</string>
    <string name="done">DONE</string>
    <string name="my_to_watch_anime">My to watch anime:</string>
    <string name="watchlist">Watchlist</string>
    <string name="today_s_trend_anime">Today\'s trend anime:</string>
    <string name="random_anime">Random Anime</string>
</resources>