<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/accent_color"
    tools:context=".loginpage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/cat_logo"
        android:contentDescription="@string/anime_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textSize="40sp"
        android:fontFamily="@font/rammetto_one"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/login_shape"
        android:paddingHorizontal="15dp"
        android:paddingVertical="25dp"
        android:gravity="center">



        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/border_style"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/border_style"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/white_color"
            android:enabled="false"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/white_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="5dp"
                android:text="@string/register"
                android:textColor="@color/accent_color"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>