<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homepage">


    <com.example.animode.BottomRoundedCardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/transparent"
        app:cardUseCompatPadding="false"
        android:layout_height="wrap_content"
        android:elevation="0dp">

        <VideoView
            android:id="@+id/vvVideo"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:backgroundTint="@color/primary_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/search"
                android:src="@drawable/search" />

        </LinearLayout>

    </com.example.animode.BottomRoundedCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today_s_trend_anime"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/accent_color"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random_anime"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/accent_color"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRandom"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>




</LinearLayout>