<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".registrationpage"
    tools:ignore="hardCodedText, UselessParent, Autofill"
    android:background="@color/accent_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/cat_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:paddingHorizontal="25dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="FILL UP YOUR USER INFORMATION"
        android:paddingHorizontal="25dp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_shape"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_stroke"
                android:gravity="center_vertical"
                android:padding="10dp"
                app:hintTextColor="@color/accent_color"
                android:layout_marginVertical="15dp">

                <EditText
                    android:id="@+id/etFname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_stroke"
                app:hintTextColor="@color/accent_color"
                android:gravity="center_vertical"
                android:layout_marginVertical="15dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etLname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_stroke"
                app:hintTextColor="@color/accent_color"
                android:gravity="center_vertical"
                android:layout_marginVertical="15dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_stroke"
                app:hintTextColor="@color/accent_color"
                android:gravity="center_vertical"
                android:layout_marginVertical="15dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_stroke"
                app:hintTextColor="@color/accent_color"
                android:gravity="center_vertical"
                android:layout_marginVertical="15dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/etConPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@drawable/accent_shape"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center_horizontal"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="go back"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="#FFFFFF"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>